# rs_game_base_proj

./: .gitattributes  Cargo.toml  TODO.md  build.rs  config.ini  hot_run.py  readme.md  zsh.exe.stackdump
engine/: Cargo.toml
engine/src/: audio.rs  geometry.rs  imgui.rs  lib.rs  logging.rs
engine/src/geometry/: intersection.rs  mod.rs
engine/src/graphics/: animation.rs  fonts.rs  fullscreen.rs  rendering.rs
engine/src/graphics/shaders/: vertex.shader
engine/src/hot_reload/: audio_reload.rs  mod.rs
engine/src/imgui/: dock.rs  mod.rs
engine/src/input/: button.rs  config.rs  input_stack.rs  keyboard.rs  mouse.rs
examples/: Cargo.toml  gl_triangle.rs  notify_print_event.rs  notify_receive_over_channel.rs  opengl_rgb_triangle.frag  opengl_rgb_triangle.rs  opengl_rgb_triangle.vert  opengl_textures.frag  opengl_textures.rs  rgb_triangle.rs  textures.rs
examples/freetype_single_glyph/: main.rs
examples/opengl_fixed_resolution/: main.rs  shader.frag
examples/opengl_framebuffer/: framebuffer.frag  main.rs
examples/opengl_textures/: main.rs  opengl_textures.vert
examples/opengl_window/: main.rs
game/: Cargo.toml
game/src/: editor.rs  lib.rs  ui.rs
resources/: smiley.aseprite  smiley.json  smiley2.aseprite  smiley2.json
src/: audio.rs  fragment.shader  fragment2.glsl  game_state.rs  geometry.rs  hot_reload.rs  input.rs  logging.rs  main.rs  old_main.rs  rendering.rs  shader.frag  sprites.rs  triangle.frag  vertex.glsl  vertex.shader
src/graphics/: animation.rs  fonts.rs  fullscreen.rs  mod.rs  rendering.rs  sprites.rs
src/hot_reload/: audio_reload.rs  mod.rs  sprite_reload.rs
src/input/: config.rs  file.rs  mod.rs  mouse.rs
src/rendering/: fragment.shader  midpoint.rs  mod.rs  vertex.shader
src/shaders/: fragment.shader
