[package]
name = "base_project"
version = "0.1.0"
edition = "2021"


[dependencies]
# Utility
itertools = "0.10.5"
glam = "0.23.0"

# Platform
sdl2 = "0.34.5"

# Graphics
gl = "0.10.0"
image = "0.24.6"

# ImGui
imgui = "0.9.0"
imgui-opengl-renderer = "0.12.0"
imgui-sdl2 = "0.15.1"

# Logging
log = "0.4.17"
simple_logger = "4.1.0"

# Serialization
configparser = "3.0.2"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
aseprite = "0.1.3"

# Unit testing
parameterized = "1.0.1"


[build-dependencies]
# Application Icon
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

# Copy DLLs
copy_to_output = "2.1.0"

