[workspace]
resolver = "2"
members = ["engine", "game"]

[package]
name = "base_project"
version = "0.1.0"
edition = "2021"

[dependencies]
engine = { path = "engine" }
game = { path = "game" }

# Logging
log = "0.4.17"
simple_logger = "4.1.0"

# Hot reloading
hot-lib-reloader = "^0.6"
notify = "5.1.0"

# ImGui
imgui = "0.9.0"

# Platform
sdl2 = { version = "0.34.5", features = ["mixer"] }

# Example dependencies
gl = "0.10.0"
image = "0.24.6"
freetype-rs = "0.32.0"

[build-dependencies]
# Application Icon
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

# Copy DLLs
copy_to_output = "2.1.0"


