[package]
name = "game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
engine = { path = "../engine" }

# Utility
itertools = "0.10.5"

# Platform
sdl2 = { version = "0.34.5", features = ["mixer"] }

# ImGui
imgui = "0.9.0"

# Logging
log = "0.4.17"

# Serialization
configparser = "3.0.2"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
aseprite = "0.1.3"

# Unit testing
parameterized = "1.0.1"
