[package]
name = "game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
engine = { path = "../engine" }

# Utility
glam = "0.23.0"

# Platform
sdl2 = { version = "0.34.5", features = ["mixer"] }

# ImGui
imgui = { version = "0.9.0", features = ["docking"] }

# Logging
log = "0.4.17"

# Serialization
configparser = "3.0.2"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
aseprite = "0.1.3"

# Unit testing
parameterized = "1.0.1"
